Build Majority of Bindings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,13 @@
 {
   "cSpell.words": [
-    "ghostty"
+    "abgr",
+    "argb",
+    "BGRA",
+    "Borderless",
+    "ghostty",
+    "RGBA",
+    "RGFW",
+    "Unhold"
   ],
   "editor.insertSpaces": true,
   "editor.tabSize": 2,
